backend for the intiail authorization completed.
